# serializer version: 1
# name: test_bound_print
  '[0, 1]'
# ---
# name: test_constraint_print_equality
  'Constraint(x1 + 2*x2 - 5 == 0)'
# ---
# name: test_constraint_print_greater_equal
  'Constraint(-x1 - x2 - x3 + 1 <= 0)'
# ---
# name: test_constraint_print_less_equal
  'Constraint(x1 + 2*x2 - 10 <= 0)'
# ---
# name: test_function_print_linear
  'Function(2*x1 + 3*x2 + 1)'
# ---
# name: test_function_print_polynomial
  'Function(x1*x2*x3 + x1*x2 + x1)'
# ---
# name: test_function_print_quadratic
  'Function(x1*x2 + 2*x1 + 3*x2 + 4)'
# ---
# name: test_function_print_tiny_nonzero_coefficient
  'Function(0.00000000000000000001*x1)'
# ---
# name: test_instance_print_disambiguates_duplicate_labels_across_sections
  '''
  Instance(sense=minimize, decision_variables=2, active_constraints=1, removed_constraints=0, named_functions=0)
  Objective:
    x{id=0}
  Constraints:
    [1] limit: x{id=1} - 1 <= 0
  '''
# ---
# name: test_instance_print_limits_section_rows
  '''
  Instance(sense=minimize, decision_variables=25, active_constraints=22, removed_constraints=0, named_functions=0)
  Objective:
    x[0]
  Constraints:
    [0] row[0]: x[0] - 1 <= 0
    [1] row[1]: x[1] - 1 <= 0
    [2] row[2]: x[2] - 1 <= 0
    [3] row[3]: x[3] - 1 <= 0
    [4] row[4]: x[4] - 1 <= 0
    [5] row[5]: x[5] - 1 <= 0
    [6] row[6]: x[6] - 1 <= 0
    [7] row[7]: x[7] - 1 <= 0
    [8] row[8]: x[8] - 1 <= 0
    [9] row[9]: x[9] - 1 <= 0
    [10] row[10]: x[10] - 1 <= 0
    [11] row[11]: x[11] - 1 <= 0
    [12] row[12]: x[12] - 1 <= 0
    [13] row[13]: x[13] - 1 <= 0
    [14] row[14]: x[14] - 1 <= 0
    [15] row[15]: x[15] - 1 <= 0
    [16] row[16]: x[16] - 1 <= 0
    [17] row[17]: x[17] - 1 <= 0
    [18] row[18]: x[18] - 1 <= 0
    [19] row[19]: x[19] - 1 <= 0
    ... (2 more rows)
  '''
# ---
# name: test_instance_print_limits_structural_variable_sets
  '''
  Instance(sense=minimize, decision_variables=25, active_constraints=1, removed_constraints=0, named_functions=0)
  Objective:
    x[0]
  One-hot constraints:
    [3] choose: exactly one of {x[0], x[1], x[2], x[3], x[4], x[5], x[6], x[7], x[8], x[9], x[10], x[11], x[12], x[13], x[14], x[15], x[16], x[17], x[18], x[19], ... (5 more variables)} = 1
  '''
# ---
# name: test_instance_print_uses_modeling_labels
  '''
  Instance(sense=maximize, decision_variables=3, active_constraints=3, removed_constraints=0, named_functions=1)
  Objective:
    x[0] + x[1]
  Constraints:
    [10] capacity[0]: x[0] + x[1] - 1 <= 0
  Indicator constraints:
    [20] active: x[0] = 1 -> x[1] - 1 <= 0
  One-hot constraints:
    [30] choose: exactly one of {x[0], x[1]} = 1
  Named functions:
    [5] score: 2*y + 3
  '''
# ---
# name: test_instance_stats_print
  "{'decision_variables': {'total': 3, 'by_kind': {'binary': 2, 'integer': 1, 'continuous': 0, 'semi_integer': 0, 'semi_continuous': 0, 'finite_domain': 0}, 'by_usage': {'used_in_objective': 2, 'used_in_constraints': 3, 'used': 3, 'fixed': 0, 'dependent': 0, 'irrelevant': 0}}, 'constraints': {'total': 2, 'active': 2, 'removed': 0}}"
# ---
# name: test_linear_print_constant_only
  'Linear(5)'
# ---
# name: test_linear_print_empty
  'Linear(0)'
# ---
# name: test_linear_print_negative_coefficients
  'Linear(-2.5*x1 + 4*x3 - x5 - 3)'
# ---
# name: test_linear_print_simple
  'Linear(2*x1 + 3*x2 + 1.5)'
# ---
# name: test_parametric_instance_print_disambiguates_parameter_and_structural_variable
  '''
  ParametricInstance(sense=minimize, decision_variables=1, parameters=1, active_constraints=1, removed_constraints=0, named_functions=0)
  Objective:
    shared{id=100}
  One-hot constraints:
    [7] choose: exactly one of {shared{id=0}} = 1
  '''
# ---
# name: test_parametric_instance_print_uses_parameter_labels
  '''
  ParametricInstance(sense=minimize, decision_variables=1, parameters=1, active_constraints=0, removed_constraints=0, named_functions=0)
  Objective:
    x + p[scenario=base]
  '''
# ---
